K8S/Service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: ${APP_NAME}
  name: ${APP_NAME}
  namespace: ${NAMESPACE}
spec:
  ports:
  - port: 5001
    protocol: TCP
    targetPort: 5001
  - port: 3333
    protocol: TCP
    targetPort: 3333
  selector:
    app: ${APP_NAME}
  type: ClusterIP
